# resource-catalogue-fastapi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: actions.yaml
resource_catalogue_fastapi/: __init__.py  airbus_client.py  models.py  open_cosmos_client.py  opencosmos_client.py  planet_client.py  utils.py
tests/: test_airbus_client.py  test_open_cosmos_client.py  test_opencosmos_client.py  test_planet_client.py  test_resource_catalogue_fastapi.py
